# scrimward

./: README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: add.md  list.md  setup.md  status.md
docs/: LEARNINGS-headroom.md  REDACTION-POLICY.md  SUPPORTED-TOOLS.md  VERIFICATION.md
docs/integrations/: README.md  codex-cli.md  cursor.md  gemini-cli.md  github-copilot.md  windsurf.md
goguard/: main.go  main_test.go
hooks/: hooks.json
redactly/: cli.py  config.py  detectors.py  engine.py  proxy.py  vault.py
redactly/adapters/: anthropic.py  openai_chat.py
scrimward/: __init__.py  cli.py  config.py  detectors.py  engine.py  image_redactor.py  proxy.py  vault.py
scrimward/adapters/: __init__.py  anthropic.py  base.py  gemini.py  openai_chat.py  openai_responses.py
tests/: test_redactly.py  test_scrimward.py
